--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 								<li drop-name="cfp"><a href="./?page=cfp.html">CFP (Main Conference)</a></li>
 								<li drop-name="cfp"><a href="./?page=cfp-student.html">CFP (Student Session)</a></li>
 							</ul>
-						
-						
+
+
 						</li>
 						<li drop-name="keynotes" data-page="keynotes.html"><a href="./?page=keynotes.html">Keynotes</a></li>
 						<li class="dropdown" drop-name="attending">
@@ -120,6 +120,37 @@
 				</div>
 			</div>
 	</nav>
+
+	<!-- Modal -->
+	<div class="modal fade" id="COVIDAlert" tabindex="-1" role="dialog" aria-labelledby="Corona Alert" aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header text-center">
+
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+					<h5 class="modal-title" id="exampleModalLongTitle">COVID-19</h5>
+				</div>
+				<div class="modal-body text-justify">
+					The diffusion of COVID-19 (“coronavirus”) is constantly monitored by the conference organizers. Based on <a href="https://www.who.int/"> World Health Organization</a> (WHO) information, the number of new reported infections is now <a href="https://www.who.int/redirect-pages/page/novel-coronavirus-(covid-19)-situation-dashboard">decreasing</a> in Korea. For this reason, we expect a positive evolution by August.
+
+					Since safety of participants is of paramount importance to the organizers, would the situation be still harmful for participants according to the WHO, we are prepared to allow speakers the remote participation via video-conferencing system.
+				</div>
+				<div class="modal-footer">
+					Do not show this again.
+
+					<input type="checkbox" id="alertOFF" value="Do not show this for next 24 Hours.">
+					<button type="button" onclick="doNotShowAgain()" class="btn btn-secondary" data-dismiss="modal">Close</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+
+
+
 
 	<!-- main contents -->
 	<div class="container-empty">
@@ -213,6 +244,38 @@
 			}
 		});
 	</script>
+
+
+	<script>
+		function doNotShowAgain() {
+			if ($('#alertOFF').is(':checked')) {
+				console.log("Alert Disabled for next 24 hours.");
+				var now = new Date().getTime();
+				localStorage.setItem('alertOFFTime', now)
+			}
+		}
+
+		$(document).ready(function() {
+			var hours = 24; // Reset after 24 hours 
+
+			var now = new Date().getTime();
+			var alertOFFTime = localStorage.getItem('alertOFFTime');
+			if (alertOFFTime === null) {
+				$("#COVIDAlert").modal('show');
+			} else {
+				if (now - alertOFFTime > hours * 60 * 60 * 1000) {
+					localStorage.clear()
+					$("#COVIDAlert").modal('show');
+				} else {
+					console.log("Alert OFF. ");
+				}
+			}
+
+
+
+		});
+	</script>
+
 </body>
 
 </html>
