--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 					<h5 class="modal-title" id="exampleModalLongTitle">COVID-19</h5>
 				</div>
 				<div class="modal-body text-justify">
-					The diffusion of COVID-19 (“coronavirus”) is constantly monitored by the conference organizers. Based on <a href="https://www.who.int/"> World Health Organization</a> (WHO) information, the number of new reported infections is now decreasing in Korea (<a href="https://www.who.int/redirect-pages/page/novel-coronavirus-(covid-19)-situation-dashboard">source</a>: https://www.who.int/redirect-pages/page/novel-coronavirus-(covid-19)-situation-dashboard). For this reason, we expect a positive evolution by August.
+					The diffusion of COVID-19 (“coronavirus”) is constantly monitored by the conference organizers. Based on <a href="https://www.who.int/"> World Health Organization</a> (WHO) information, the number of new reported infections is now decreasing in Korea (source: <a href="https://www.who.int/redirect-pages/page/novel-coronavirus-(covid-19)-situation-dashboard"> https://www.who.int/redirect-pages/page/novel-coronavirus-(covid-19)-situation-dashboard</a>). For this reason, we expect a positive evolution by August.
 
 					Since safety of participants is of paramount importance to the organizers, would the situation be still harmful for participants according to the WHO, we are prepared to allow speakers the remote participation via video-conferencing system.
 				</div>
