--- a/cfp.html
+++ b/cfp.html
@@ -13,10 +13,10 @@
     			<li>Final Paper Submission: <strong>June 15, 2020</strong></li>
     			<li>Conference Date: <strong>August 19-21, 2020</strong></li>
     		</ul>
-   
-<p>The RTCSA conference series (now at its 26th edition) brings together researchers and developers from academia and industry for advancing the <strong>technology</strong> and the <strong>theory</strong> to design and develop <strong>time-sensitive</strong> applications. All traditional applications in which temporal aspects need to be considered are in the scope of the conference. <strong>CPS</strong>, <strong>(Industrial) IoT</strong>, <strong>embedded systems</strong>, <strong>fog/edge/cloud computing</strong> are just notable examples. RTCSA welcomes both research and industrial papers that describe research or technical aspects in the area of embedded and real-time systems. Proceedings will be published by the IEEE Computer Society on <a href="https://ieeexplore.ieee.org/" target="_blank">IEEExplore</a> and will be indexed by most search engines including <a href="https://www.scopus.com/" target="_blank">Scopus</a>, <a href="https://www.webofknowledge.com" target="_blank">Web of Science</a>, <a href="https://dblp.uni-trier.de/" target="_blank">DBLP</a>.</p>	
-		
-		<p>Submission of a paper should be regarded as a commitment that, should the paper be accepted, at least one of the authors will register and attend the conference to present the work. RTCSA 2020 reserves the right to exclude a paper from distribution after the conference (e.g., removal from the digital library and indexing services), if the paper is not presented at the conference.</p>
+
+    		<p>The RTCSA conference series (now at its 26th edition) brings together researchers and developers from academia and industry for advancing the <strong>technology</strong> and the <strong>theory</strong> to design and develop <strong>time-sensitive</strong> applications. All traditional applications in which temporal aspects need to be considered are in the scope of the conference. <strong>CPS</strong>, <strong>(Industrial) IoT</strong>, <strong>embedded systems</strong>, <strong>fog/edge/cloud computing</strong> are just notable examples. RTCSA welcomes both research and industrial papers that describe research or technical aspects in the area of embedded and real-time systems. Proceedings will be published by the IEEE Computer Society on <a href="https://ieeexplore.ieee.org/" target="_blank">IEEExplore</a> and will be indexed by most search engines including <a href="https://www.scopus.com/" target="_blank">Scopus</a>, <a href="https://www.webofknowledge.com" target="_blank">Web of Science</a>, <a href="https://dblp.uni-trier.de/" target="_blank">DBLP</a>.</p>
+
+    		<p>Submission of a paper should be regarded as a commitment that, should the paper be accepted, at least one of the authors will register and attend the conference to present the work. RTCSA 2020 reserves the right to exclude a paper from distribution after the conference (e.g., removal from the digital library and indexing services), if the paper is not presented at the conference.</p>
     		<p>&nbsp;</p>
     		<h3>Topic of Interest</h3>
     		<p>The 26th edition of RTCSA will bring together researchers and developers from academia and industry to promote cross-fertilization and discuss advances and trends in the technology of embedded and real-time systems and their emerging applications, including the Internet of Things and Cyber-Physical Systems. RTCSA 2020 seeks papers that describe original research in the following areas, but are not limited to:</p>
@@ -79,5 +79,11 @@
     		<p style="text-align:justify">By submitting a paper, authors implicitly agree that <strong>at least one author will register</strong> to the conference and participate by <strong>presenting the paper in person</strong>. RTCSA 2020 reserves the right to exclude a paper from distribution after the conference (e.g., removal from the digital libraries and indexing services), if the paper is not presented at the conference.</p>
 
 
+
+
+    		<h3>COVID-19</h3>
+		<p>
+    		The diffusion of COVID-19 (“coronavirus”) is constantly monitored by the conference organizers. Based on <a href="https://www.who.int/"> World Health Organization</a> (WHO) information, the number of new reported infections is now decreasing in Korea (source: <a href="https://www.who.int/redirect-pages/page/novel-coronavirus-(covid-19)-situation-dashboard"> https://www.who.int/redirect-pages/page/novel-coronavirus-(covid-19)-situation-dashboard</a>). For this reason, we expect a positive evolution by August.
+		</p>
     	</div>
     </div>
