--- a/home.html
+++ b/home.html
@@ -121,6 +121,11 @@
 									<strong>2020-02-26 : </strong><a href="./?page=cfp-student.html"> Call For Student Session Papers </a>
 								</div>
 							</li>
+							<li>
+								<div class="row">
+									<strong>2020-03-03 : </strong><a href="javascript:showNotice()"> COVID-19 Notice </a>
+								</div>
+							</li>
 
 						</ul>
 						</div>
