Minor changes in the site

--- a/home.html
+++ b/home.html
@@ -126,6 +126,11 @@
 									<strong>2020-03-03 : </strong><a href="javascript:showNotice()"> COVID-19 Notice </a>
 								</div>
 							</li>
+							<li>
+								<div class="row">
+									<strong>2020-03-04 : </strong><a href="./?page=cfp.html/#submission">Submission Site Open </a>
+								</div>
+							</li>
 
 						</ul>
 						</div>
