--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				<div id="navbar" class="collapse navbar-collapse" style="padding-top:20px">
 					<ul class="nav navbar-nav navbar-right">
 						<li class="dropdown" drop-name="cfp">
-							<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="#">CFP<span class="caret"></span></a>
+							<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="#">Call for Papers<span class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li drop-name="cfp"><a href="./?page=cfp.html">CFP (Main Conference)</a></li>
 								<li drop-name="cfp"><a href="./?page=cfp-student.html">CFP (Student Session)</a></li>
@@ -133,9 +133,7 @@
 					<h5 class="modal-title" id="exampleModalLongTitle">COVID-19</h5>
 				</div>
 				<div class="modal-body text-justify">
-					The diffusion of COVID-19 (“coronavirus”) is constantly monitored by the conference organizers. Based on <a href="https://www.who.int/"> World Health Organization</a> (WHO) information, the number of new reported infections is now decreasing in Korea (source: <a href="https://www.who.int/redirect-pages/page/novel-coronavirus-(covid-19)-situation-dashboard"> https://www.who.int/redirect-pages/page/novel-coronavirus-(covid-19)-situation-dashboard</a>). For this reason, we expect a positive evolution by August.
-
-					Since safety of participants is of paramount importance to the organizers, would the situation be still harmful for participants according to the WHO, we are prepared to allow speakers the remote participation via video-conferencing system.
+					The diffusion of COVID-19 (“coronavirus”) is constantly monitored by the conference organizers. Based on <a href="https://www.who.int/"> World Health Organization</a> (WHO) information, the number of new reported infections is now decreasing in Korea (source: <a href="https://www.who.int/redirect-pages/page/novel-coronavirus-(covid-19)-situation-dashboard"> https://www.who.int/redirect-pages/page/novel-coronavirus-(covid-19)-situation-dashboard</a>). For this reason, we expect a positive evolution by August. Since safety of participants is of paramount importance to the organizers, would the infection pose a threat to participants according to the WHO, we will allow speakers the remote presentation via a video-conferencing system.
 				</div>
 				<div class="modal-footer">
 					Do not show this message again.
