--- a/cfp.html
+++ b/cfp.html
@@ -1,6 +1,6 @@
     <div class="row">
     	<div class="col-lg-12">
-    		<h2>Call for Paper</h2>
+    		<h2>Call for Papers</h2>
     		<p>The 26th IEEE International Conference on Embedded and Real-Time Computing Systems and Applications</p>
     		<p>Location: <strong>Gangnueng, South Korea</strong><br>
     			Date: <strong>August 19-21, 2020</strong><br>
@@ -77,13 +77,14 @@
     		<p>In some cases, the Program Committee may decide to accept a full paper submission as a short paper, in which case, the authors will be required to reduce its length for the final version. Conference content will be published by the IEEE Computer Society on <a href="https://ieeexplore.ieee.org/" target="_blank">IEEExplore</a> and will be indexed by most search engines including <a href="https://www.scopus.com/" target="_blank">Scopus</a>, <a href="https://www.webofknowledge.com" target="_blank">Web of Science</a>, <a href="https://dblp.uni-trier.de/" target="_blank">DBLP</a>.</p>
 
     		<p style="text-align:justify">By submitting a paper, authors implicitly agree that <strong>at least one author will register</strong> to the conference and participate by <strong>presenting the paper in person</strong>. RTCSA 2020 reserves the right to exclude a paper from distribution after the conference (e.g., removal from the digital libraries and indexing services), if the paper is not presented at the conference.</p>
-
-
+		<div id="submission">		
+		<h3>Submission Site</h3>
+		<p> Please submit your papers at the following<a href="https://easychair.org/my/conference?conf=rtcsa2020"> link.</a></p>
+		</div>
 
 		<hr>
     		<h3>COVID-19</h3>
 		<p>
-    		The diffusion of COVID-19 (“coronavirus”) is constantly monitored by the conference organizers. Based on <a href="https://www.who.int/"> World Health Organization</a> (WHO) information, the number of new reported infections is now decreasing in Korea (source: <a href="https://www.who.int/redirect-pages/page/novel-coronavirus-(covid-19)-situation-dashboard"> https://www.who.int/redirect-pages/page/novel-coronavirus-(covid-19)-situation-dashboard</a>). For this reason, we expect a positive evolution by August.
-		</p>
+    		The diffusion of COVID-19 (“coronavirus”) is constantly monitored by the conference organizers. Based on <a href="https://www.who.int/"> World Health Organization</a> (WHO) information, the number of new reported infections is now decreasing in Korea (source: <a href="https://www.who.int/redirect-pages/page/novel-coronavirus-(covid-19)-situation-dashboard"> https://www.who.int/redirect-pages/page/novel-coronavirus-(covid-19)-situation-dashboard</a>). For this reason, we expect a positive evolution by August. Since safety of participants is of paramount importance to the organizers, would the infection pose a threat to participants according to the WHO, we will allow speakers the remote presentation via a video-conferencing system.</p>
     	</div>
     </div>
