--- a/home.html
+++ b/home.html
@@ -128,7 +128,7 @@
 							</li>
 							<li>
 								<div class="row">
-									<strong>2020-03-04 : </strong><a href="./?page=cfp.html/#submission">Submission Site Open </a>
+									<strong>2020-03-04 : </strong><a href="./?page=cfp.html#submission">Submission Site Open </a>
 								</div>
 							</li>
 
