--- a/venue.html
+++ b/venue.html
@@ -232,7 +232,7 @@
 	<hr>
 	<h3>COVID-19</h3>
 	<p>
-	The diffusion of COVID-19 (“coronavirus”) is constantly monitored by the conference organizers. Based on <a href="https://www.who.int/"> World Health Organization</a> (WHO) information, the number of new reported infections is now decreasing in Korea (source: <a href="https://www.who.int/redirect-pages/page/novel-coronavirus-(covid-19)-situation-dashboard"> https://www.who.int/redirect-pages/page/novel-coronavirus-(covid-19)-situation-dashboard</a>). For this reason, we expect a positive evolution by August.
+    		The diffusion of COVID-19 (“coronavirus”) is constantly monitored by the conference organizers. Based on <a href="https://www.who.int/"> World Health Organization</a> (WHO) information, the number of new reported infections is now decreasing in Korea (source: <a href="https://www.who.int/redirect-pages/page/novel-coronavirus-(covid-19)-situation-dashboard"> https://www.who.int/redirect-pages/page/novel-coronavirus-(covid-19)-situation-dashboard</a>). For this reason, we expect a positive evolution by August. Since safety of participants is of paramount importance to the organizers, would the infection pose a threat to participants according to the WHO, we will allow speakers the remote presentation via a video-conferencing system.</p>
 	</p>
 
 </div>
